fix: image-grid alignment

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -206,6 +206,7 @@ main.about
     li:nth-child(5)
       .imageGrid-Item_Wrapper
         width: 33.3333%
+        align-self: flex-end
     li:nth-child(6)
       .imageGrid-Item_Wrapper
         align-self: center
@@ -220,6 +221,7 @@ main.about
     li:nth-child(9)
       .imageGrid-Item_Wrapper
         width: 66.6666%
+        align-self: flex-end
     li:nth-child(10)
       .imageGrid-Item_Wrapper
         width: 100%
